
public static class AnimatorParameter
{
    public const string SPEED_F = "Speed";
    public const string HORIZONTAL_ATK_TRIG = "Horizontal_Attack";
    public const string UP_ATK_TRIG = "Up_Attack";
    public const string DOWN_ATK_TRIG = "Down_Attack";
    public const string DEAD_TRIG = "Dead";
}